--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Your Name</title>
+  <title>Nikitha Donekal Chandrashekar</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
     body { font-family: system-ui, sans-serif; margin: 2rem; line-height: 1.6; }
@@ -15,7 +15,7 @@
 </head>
 <body>
   <header>
-    <h1>Hello, I’m Your Name 👋</h1>
+    <h1>Hello, I’m Nikitha.👋</h1>
     <nav>
       <a href="/">Home</a>
       <a href="#projects">Projects</a>
@@ -23,12 +23,12 @@
     </nav>
   </header>
   <main>
-    <p>Welcome to my GitHub Pages site!</p>
+    <p>Welcome to my Personal Webpage!</p>
     <section id="projects">
       <h2>Projects</h2>
       <ul>
-        <li>Cool thing I built</li>
-        <li>Another cool thing</li>
+        <li></li>
+        <li>g</li>
       </ul>
     </section>
     <section id="contact">
