--- a/index.html
+++ b/index.html
@@ -1,44 +1,220 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Nikitha Donekal Chandrashekar</title>
-  <link rel="stylesheet" href="styles.css" />
-  <style>
-    body { font-family: system-ui, sans-serif; margin: 2rem; line-height: 1.6; }
-    header { max-width: 720px; margin: auto; }
-    nav a { margin-right: 1rem; text-decoration: none; }
-    main { max-width: 720px; margin: 2rem auto; }
-    footer { max-width: 720px; margin: 3rem auto; font-size: .9rem; color: #666; }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Hello, I’m Nikitha.👋</h1>
-    <nav>
-      <a href="/">Home</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
-  <main>
-    <p>Welcome to my Personal Webpage!</p>
-    <section id="projects">
-      <h2>Projects</h2>
-      <ul>
-        <li></li>
-        <li>g</li>
-      </ul>
-    </section>
-    <section id="contact">
-      <h2>Contact</h2>
-      <p>Email me at you@example.com</p>
-    </section>
-  </main>
-  <footer>© <span id="y"></span> Your Name</footer>
-  <script>
-    document.getElementById('y').textContent = new Date().getFullYear();
-  </script>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Nikitha Donekal Chandrashekar</title>
+    <meta name="description" content="Personal academic homepage of Nikitha Donekal Chandrashekar" />
+
+    <!-- Fonts: use safe, fast, sans-serif stack -->
+    <style>
+      :root {
+        --bg: #f6f6f7;     /* neutral background */
+        --card: #ffffff;   /* surface */
+        --text: #1a1a1a;   /* primary text */
+        --muted: #6b7280;  /* secondary text */
+        --accent: #0f766e; /* calm teal accent */
+        --border: #e5e7eb; /* light borders */
+        --shadow: 0 10px 30px rgba(0,0,0,.06), 0 2px 6px rgba(0,0,0,.04);
+      }
+      @media (prefers-color-scheme: dark) {
+        :root {
+          --bg: #0b0c0f;
+          --card: #121318;
+          --text: #f3f4f6;
+          --muted: #a3a6ad;
+          --accent: #2dd4bf;
+          --border: #1f2430;
+          --shadow: 0 10px 30px rgba(0,0,0,.4), 0 2px 6px rgba(0,0,0,.3);
+        }
+      }
+
+      html, body {
+        height: 100%;
+      }
+      body {
+        margin: 0;
+        background: var(--bg);
+        color: var(--text);
+        font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
+        line-height: 1.7;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
+
+      /* Layout */
+      .wrap {
+        max-width: 1000px;
+        margin: 0 auto;
+        padding: clamp(16px, 3vw, 32px);
+      }
+
+      /* Header / Nav */
+      header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 16px;
+        padding: 18px clamp(8px, 1vw, 16px);
+        margin-bottom: 10px;
+      }
+      .brand {
+        font-weight: 750;
+        letter-spacing: 0.2px;
+        font-size: clamp(18px, 2.4vw, 22px);
+        text-decoration: none;
+        color: var(--text);
+      }
+      nav {
+        display: flex;
+        gap: clamp(10px, 2.6vw, 22px);
+        align-items: center;
+        flex-wrap: wrap;
+      }
+      nav a {
+        text-decoration: none;
+        color: var(--text);
+        font-weight: 550;
+        font-size: 0.98rem;
+        padding: 8px 12px;
+        border-radius: 12px;
+        transition: transform .18s ease, background-color .18s ease, color .18s ease;
+      }
+      nav a:hover, nav a:focus-visible {
+        background: var(--card);
+        color: var(--accent);
+        outline: none;
+        transform: translateY(-1px);
+        box-shadow: var(--shadow);
+      }
+
+      /* Hero Card */
+      .card {
+        background: var(--card);
+        border: 1px solid var(--border);
+        border-radius: 20px;
+        box-shadow: var(--shadow);
+        overflow: clip;
+      }
+      .hero {
+        display: grid;
+        grid-template-columns: 1.2fr 1fr;
+        gap: clamp(18px, 4vw, 36px);
+        padding: clamp(18px, 4vw, 42px);
+      }
+      @media (max-width: 820px) {
+        .hero { grid-template-columns: 1fr; }
+      }
+
+      .intro {
+        display: grid;
+        align-content: center;
+        gap: clamp(10px, 2vw, 18px);
+      }
+      .intro h1 {
+        margin: 0;
+        font-size: clamp(28px, 4.5vw, 40px);
+        line-height: 1.2;
+        letter-spacing: .2px;
+      }
+      .intro p {
+        margin: 0;
+        color: var(--muted);
+        font-size: clamp(15px, 2.2vw, 17px);
+      }
+      .cta-row {
+        display: flex;
+        gap: 12px;
+        flex-wrap: wrap;
+        margin-top: 8px;
+      }
+      .btn {
+        display: inline-flex;
+        align-items: center;
+        gap: 10px;
+        border: 1px solid var(--border);
+        background: var(--card);
+        color: var(--text);
+        text-decoration: none;
+        padding: 10px 14px;
+        border-radius: 14px;
+        font-weight: 600;
+        transition: transform .18s ease, box-shadow .18s ease, border-color .18s ease, color .18s ease;
+        will-change: transform;
+      }
+      .btn:hover, .btn:focus-visible {
+        transform: translateY(-1px);
+        box-shadow: var(--shadow);
+        border-color: color-mix(in oklab, var(--accent) 30%, var(--border));
+        color: var(--accent);
+        outline: none;
+      }
+
+      /* Portrait */
+      .portrait {
+        place-self: center;
+        width: min(340px, 90%);
+        aspect-ratio: 4/5;
+        border-radius: 18px;
+        object-fit: cover;
+        box-shadow: var(--shadow);
+        border: 1px solid var(--border);
+      }
+
+      /* Footer */
+      footer {
+        text-align: center;
+        color: var(--muted);
+        font-size: 0.95rem;
+        padding: 24px 8px 12px;
+      }
+      .tiny { font-variant-numeric: tabular-nums; }
+
+      /* Accessibility helpers */
+      .sr-only {
+        position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0,0,0,0); border: 0;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="wrap">
+      <header>
+        <a class="brand" href="/">Nikitha Donekal Chandrashekar</a>
+        <nav aria-label="Primary">
+          <a href="/research.html">Research</a>
+          <a href="/teaching.html">Teaching</a>
+          <a href="/cv.pdf" target="_blank" rel="noopener">CV</a>
+          <a href="/contact.html">Contact</a>
+        </nav>
+      </header>
+
+      <main>
+        <section class="card hero" aria-labelledby="intro-title">
+          <div class="intro">
+            <h1 id="intro-title">Hello! I’m Nikitha.</h1>
+            <p>
+              I’m an academic researcher with interests in <em>your areas here</em>. My work explores
+              <em>short description here</em>. I enjoy building things that blend rigor with real-world impact.
+            </p>
+            <div class="cta-row">
+              <a class="btn" href="/research.html" aria-label="Read about my research">Explore Research →</a>
+              <a class="btn" href="/cv.pdf" target="_blank" rel="noopener" aria-label="Open my CV in a new tab">View CV ↗</a>
+              <a class="btn" href="/contact.html" aria-label="Get in touch">Contact</a>
+            </div>
+          </div>
+
+          <!-- Replace src with your uploaded image path, e.g., /assets/profile.jpg -->
+          <img class="portrait" src="/assets/profile.jpg" alt="Portrait of Nikitha Donekal Chandrashekar" loading="lazy" />
+        </section>
+      </main>
+
+      <footer>
+        <div>© <span id="year" class="tiny"></span> Nikitha Donekal Chandrashekar</div>
+      </footer>
+    </div>
+
+    <script>
+      document.getElementById('year').textContent = new Date().getFullYear();
+    </script>
+  </body>
 </html>
