--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
     <!-- Fonts: use safe, fast, sans-serif stack -->
     <style>
       :root {
-        --bg: #f6f6f7;     /* neutral background */
+        --bg: #fffbea;     /* soft light yellow background */
         --card: #ffffff;   /* surface */
         --text: #1a1a1a;   /* primary text */
         --muted: #6b7280;  /* secondary text */
-        --accent: #0f766e; /* calm teal accent */
-        --border: #e5e7eb; /* light borders */
+        --accent: #b45309; /* warm amber accent */
+        --border: #fcd34d; /* subtle yellow border */
         --shadow: 0 10px 30px rgba(0,0,0,.06), 0 2px 6px rgba(0,0,0,.04);
       }
       @media (prefers-color-scheme: dark) {
         :root {
-          --bg: #0b0c0f;
-          --card: #121318;
+          --bg: #1a1a0f;   /* muted dark yellow tone */
+          --card: #2a2a1a;
           --text: #f3f4f6;
-          --muted: #a3a6ad;
-          --accent: #2dd4bf;
-          --border: #1f2430;
+          --muted: #d1d5db;
+          --accent: #facc15;
+          --border: #3a3a2a;
           --shadow: 0 10px 30px rgba(0,0,0,.4), 0 2px 6px rgba(0,0,0,.3);
         }
       }
