--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
     <style>
       :root {
         --bg: #fffbea;     /* soft light yellow background */
-        --card: #ffffff;   /* surface */
+        --card: #f0f9f4;   /* muted soft green for hero card */
         --text: #1a1a1a;   /* primary text */
-        --muted: #6b7280;  /* secondary text */
-        --accent: #b45309; /* warm amber accent */
-        --border: #fcd34d; /* subtle yellow border */
+        --muted: #555b63;  /* secondary text */
+        --accent: #15803d; /* refined green accent */
+        --border: #d1fae5; /* subtle pale green border */
         --shadow: 0 10px 30px rgba(0,0,0,.06), 0 2px 6px rgba(0,0,0,.04);
       }
       @media (prefers-color-scheme: dark) {
         :root {
           --bg: #1a1a0f;   /* muted dark yellow tone */
-          --card: #2a2a1a;
+          --card: #1e2b22; /* darker muted green card */
           --text: #f3f4f6;
-          --muted: #d1d5db;
-          --accent: #facc15;
-          --border: #3a3a2a;
+          --muted: #cbd5e1;
+          --accent: #4ade80;
+          --border: #334834;
           --shadow: 0 10px 30px rgba(0,0,0,.4), 0 2px 6px rgba(0,0,0,.3);
         }
       }
@@ -122,33 +122,6 @@
         color: var(--muted);
         font-size: clamp(15px, 2.2vw, 17px);
       }
-      .cta-row {
-        display: flex;
-        gap: 12px;
-        flex-wrap: wrap;
-        margin-top: 8px;
-      }
-      .btn {
-        display: inline-flex;
-        align-items: center;
-        gap: 10px;
-        border: 1px solid var(--border);
-        background: var(--card);
-        color: var(--text);
-        text-decoration: none;
-        padding: 10px 14px;
-        border-radius: 14px;
-        font-weight: 600;
-        transition: transform .18s ease, box-shadow .18s ease, border-color .18s ease, color .18s ease;
-        will-change: transform;
-      }
-      .btn:hover, .btn:focus-visible {
-        transform: translateY(-1px);
-        box-shadow: var(--shadow);
-        border-color: color-mix(in oklab, var(--accent) 30%, var(--border));
-        color: var(--accent);
-        outline: none;
-      }
 
       /* Portrait */
       .portrait {
@@ -196,11 +169,6 @@
               I’m an academic researcher with interests in <em>your areas here</em>. My work explores
               <em>short description here</em>. I enjoy building things that blend rigor with real-world impact.
             </p>
-            <div class="cta-row">
-              <a class="btn" href="/research.html" aria-label="Read about my research">Explore Research →</a>
-              <a class="btn" href="/cv.pdf" target="_blank" rel="noopener" aria-label="Open my CV in a new tab">View CV ↗</a>
-              <a class="btn" href="/contact.html" aria-label="Get in touch">Contact</a>
-            </div>
           </div>
 
           <!-- Replace src with your uploaded image path, e.g., /assets/profile.jpg -->
