--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
     <!-- Fonts: use safe, fast, sans-serif stack -->
     <style>
       :root {
-        --bg: #fffbea;     /* soft light yellow background */
-        --card: #f0f9f4;   /* muted soft green for hero card */
+        --bg: #fffbea;     /* soft pale yellow background */
+        --card: #fef3c7;   /* warmer light yellow card */
         --text: #1a1a1a;   /* primary text */
-        --muted: #555b63;  /* secondary text */
-        --accent: #15803d; /* refined green accent */
-        --border: #d1fae5; /* subtle pale green border */
-        --shadow: 0 10px 30px rgba(0,0,0,.06), 0 2px 6px rgba(0,0,0,.04);
+        --muted: #6b6b6b;  /* secondary text */
+        --accent: #b45309; /* amber accent */
+        --border: #fde68a; /* soft yellow border */
+        --shadow: 0 10px 30px rgba(0,0,0,.05), 0 2px 6px rgba(0,0,0,.04);
       }
       @media (prefers-color-scheme: dark) {
         :root {
-          --bg: #1a1a0f;   /* muted dark yellow tone */
-          --card: #1e2b22; /* darker muted green card */
+          --bg: #1f1c0d;   /* dark muted yellow background */
+          --card: #2a2512; /* darker yellowish card */
           --text: #f3f4f6;
-          --muted: #cbd5e1;
-          --accent: #4ade80;
-          --border: #334834;
+          --muted: #d1d5db;
+          --accent: #facc15;
+          --border: #3a3320;
           --shadow: 0 10px 30px rgba(0,0,0,.4), 0 2px 6px rgba(0,0,0,.3);
         }
       }
