--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Nikitha Donekal Chandrashekar</title>
+    <title>Hello! I'm Nikitha Donekal Chandrashekar</title>
     <meta name="description" content="Personal academic homepage of Nikitha Donekal Chandrashekar" />
 
     <!-- Fonts: use safe, fast, sans-serif stack -->
@@ -152,7 +152,7 @@
   <body>
     <div class="wrap">
       <header>
-        <a class="brand" href="/">Nikitha Donekal Chandrashekar</a>
+        <a class="brand" href="/">Hello! I'm Nikitha Donekal Chandrashekar</a>
         <nav aria-label="Primary">
           <a href="/research.html">Research</a>
           <a href="/teaching.html">Teaching</a>
@@ -164,10 +164,14 @@
       <main>
         <section class="card hero" aria-labelledby="intro-title">
           <div class="intro">
-            <h1 id="intro-title">Hello! I’m Nikitha.</h1>
+            <h1 id="intro-title">About Me</h1>
             <p>
-              I’m an academic researcher with interests in <em>your areas here</em>. My work explores
-              <em>short description here</em>. I enjoy building things that blend rigor with real-world impact.
+              I’m an academic researcher with interests in <em>Human-Computer Interaction, Computer-Supported Cooperative Work and Extended Reality Technologies </em>. My work focuses
+              <em>designing immersive Extended Reality (XR) systems for team-based professional training.</em>. My research investigates how XR can support realistic, high-fidelity collaboration 
+              among collocated teams in high-stakes domains such as healthcare and emergency response. 
+              As part of my doctoral work, I developed a collaborative XR simulator for medical trauma teams, guided by empirically derived design principles and validated through face and content assessments with domain professionals. 
+              My work has been presented at top-tier venues in CSCW, HCI, and XR. 
+              The research conducted is in active collaboration with Carilion Clinic, University of Pittsburg Medical Center, Indian Insititute of Technology, Madras and Virginia Tech under the guidance of my advisor, Dr. Denis Gracanin.
             </p>
           </div>
 
