--- a/index.html
+++ b/index.html
@@ -166,12 +166,14 @@
           <div class="intro">
             <h1 id="intro-title">About Me</h1>
             <p>
-              I’m an academic researcher with interests in <em>Human-Computer Interaction, Computer-Supported Cooperative Work and Extended Reality Technologies </em>. My work focuses
-              <em>designing immersive Extended Reality (XR) systems for team-based professional training.</em>. My research investigates how XR can support realistic, high-fidelity collaboration 
+              I’m an academic researcher advised by <em> Dr. Denis Gracanin </em> with interests in <em>Human-Computer Interaction, Computer-Supported Cooperative Work and Extended Reality Technologies </em>. My work focuses
+              <em>designing immersive Extended Reality (XR) systems for team-based professional training.</em> My research investigates how XR can support realistic, high-fidelity collaboration 
               among collocated teams in high-stakes domains such as healthcare and emergency response. 
-              As part of my doctoral work, I developed a collaborative XR simulator for medical trauma teams, guided by empirically derived design principles and validated through face and content assessments with domain professionals. 
-              My work has been presented at top-tier venues in CSCW, HCI, and XR. 
-              The research conducted is in active collaboration with Carilion Clinic, University of Pittsburg Medical Center, Indian Insititute of Technology, Madras and Virginia Tech under the guidance of my advisor, Dr. Denis Gracanin.
+              As part of my doctoral work, I developed a collaborative XR simulator for medical trauma teams. 
+              The research conducted is in active collaboration with Carilion Clinic, University of Pittsburg Medical Center, Indian Insititute of Technology, Madras and Virginia Tech.
+              My other research projects include <em> developing Extended Reality-based Digital Twin for Cybersecurity Education</em> in collaboration with Virginia Military Institute and 
+              <em>inclusion of LLM in undergraduate CS curriculum</em> in collaboration with Virginia Tech.               
+              My work has been presented at top-tier venues in CSCW, HCI, and XR.
             </p>
           </div>
 
