--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   <body>
     <div class="wrap">
       <header>
-        <a class="brand" href="/">Hello! I'm Nikitha Donekal Chandrashekar</a>
+        <a class="brand" href="/">Nikitha Donekal Chandrashekar</a>
         <nav aria-label="Primary">
           <a href="/research.html">Research</a>
           <a href="/teaching.html">Teaching</a>
@@ -167,13 +167,12 @@
             <h1 id="intro-title">About Me</h1>
             <p>
               I’m an academic researcher advised by <em> Dr. Denis Gracanin </em> with interests in <em>Human-Computer Interaction, Computer-Supported Cooperative Work and Extended Reality Technologies </em>. My work focuses
-              <em>designing immersive Extended Reality (XR) systems for team-based professional training.</em> My research investigates how XR can support realistic, high-fidelity collaboration 
+              <em>designing immersive Extended Reality (XR) systems for team-based professional training.</em> My doctoral research investigates how XR can support realistic, high-fidelity collaboration 
               among collocated teams in high-stakes domains such as healthcare and emergency response. 
-              As part of my doctoral work, I developed a collaborative XR simulator for medical trauma teams. 
-              The research conducted is in active collaboration with Carilion Clinic, University of Pittsburg Medical Center, Indian Insititute of Technology, Madras and Virginia Tech.
+              This research conducted is in active collaboration with Carilion Clinic, University of Pittsburg Medical Center, Indian Insititute of Technology, Madras and Virginia Tech.
               My other research projects include <em> developing Extended Reality-based Digital Twin for Cybersecurity Education</em> in collaboration with Virginia Military Institute and 
-              <em>inclusion of LLM in undergraduate CS curriculum</em> in collaboration with Virginia Tech.               
-              My work has been presented at top-tier venues in CSCW, HCI, and XR.
+              <em>inclusion of LLM in undergraduate CS curriculum</em> in collaboration with Virginia Tech.
+              I also enjoy teaching and have been an <ep>Instructor of Record</ep> for CS 2114: Data Structures and Software Design for the past 2 years.
             </p>
           </div>
 
