--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
           <div class="intro">
             <h1 id="intro-title">About Me</h1>
             <p>
-              I’m an academic researcher advised by <em> Dr. Denis Gracanin </em> with interests in <em>Human-Computer Interaction, Computer-Supported Cooperative Work and Extended Reality Technologies </em>. My work focuses
-              <em>designing immersive Extended Reality (XR) systems for team-based professional training.</em> My doctoral research investigates how XR can support realistic, high-fidelity collaboration 
-              among collocated teams in high-stakes domains such as healthcare and emergency response. 
+              I’m an academic researcher advised by <em> Dr. Denis Gracanin </em> with interests in <em>Human-Computer Interaction, Computer-Supported Cooperative Work and Extended Reality Technologies </em>. 
+              My work focuses <em>designing immersive Extended Reality (XR) systems for team-based professional training</em> and investigates how XR can support realistic, high-fidelity collaboration 
+              among collocated teams. 
               This research conducted is in active collaboration with Carilion Clinic, University of Pittsburg Medical Center, Indian Insititute of Technology, Madras and Virginia Tech.
               My other research projects include <em> developing Extended Reality-based Digital Twin for Cybersecurity Education</em> in collaboration with Virginia Military Institute and 
               <em>inclusion of LLM in undergraduate CS curriculum</em> in collaboration with Virginia Tech.
