--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Hello! I'm Nikitha Donekal Chandrashekar</title>
+    <title>Nikitha Donekal Chandrashekar Home Page</title>
     <meta name="description" content="Personal academic homepage of Nikitha Donekal Chandrashekar" />
 
     <!-- Fonts: use safe, fast, sans-serif stack -->
@@ -166,7 +166,8 @@
           <div class="intro">
             <h1 id="intro-title">About Me</h1>
             <p>
-              I’m an academic researcher advised by <em> Dr. Denis Gracanin </em> with interests in <em>Human-Computer Interaction, Computer-Supported Cooperative Work and Extended Reality Technologies </em>. 
+              I’m a final year PhD Candidate in Computer Science at Virginia Tech, USA.
+              I am advised by <em> Dr. Denis Gracanin </em> and am a researcher in the <em> Distributed Virtual Environment Lab</em>. 
               My work focuses <em>designing immersive Extended Reality (XR) systems for team-based professional training</em> and investigates how XR can support realistic, high-fidelity collaboration 
               among collocated teams. 
               This research conducted is in active collaboration with Carilion Clinic, University of Pittsburg Medical Center, Indian Insititute of Technology, Madras and Virginia Tech.
