--- a/index.html
+++ b/index.html
@@ -97,13 +97,26 @@
         overflow: clip;
       }
       .hero {
-        display: grid;
-        grid-template-columns: 1.2fr 1fr;
+        display: flex;
+        align-items: center; /* vertically aligns photo with text */
+        justify-content: space-between;
         gap: clamp(18px, 4vw, 36px);
         padding: clamp(18px, 4vw, 42px);
+        flex-wrap: wrap; /* stacks nicely on smaller screens */
       }
-      @media (max-width: 820px) {
-        .hero { grid-template-columns: 1fr; }
+
+      .intro {
+        flex: 1;
+        min-width: 280px;
+      }
+
+      .portrait {
+        flex-shrink: 0;
+        width: min(320px, 40%);
+        border-radius: 18px;
+        object-fit: cover;
+        box-shadow: var(--shadow);
+        border: 1px solid var(--border);
       }
 
       .intro {
