--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
               My work focuses <em>designing immersive Extended Reality (XR) systems for team-based professional training</em> and investigates how XR can support realistic, high-fidelity collaboration 
               among collocated teams. 
               This research conducted is in active collaboration with Carilion Clinic, University of Pittsburg Medical Center, Indian Insititute of Technology, Madras and Virginia Tech.
-              My other research projects include <em> developing Extended Reality-based Digital Twin for Cybersecurity Education</em> in collaboration with Virginia Military Institute and 
+              My other research projects include <em> developing XR-based Digital Twin for Cybersecurity Education</em> in collaboration with Virginia Military Institute and 
               <em>inclusion of LLM in undergraduate CS curriculum</em> in collaboration with Virginia Tech.
-              I also enjoy teaching and have been an <ep>Instructor of Record</ep> for CS 2114: Data Structures and Software Design for the past 2 years.
+              I also enjoy teaching and have been an <ep>Instructor </ep> for CS 2114: Data Structures and Software Design for 2 years.
             </p>
           </div>
 
