--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
         margin: 0;
         color: var(--muted);
         font-size: clamp(15px, 2.2vw, 17px);
+        text-align: justify;
       }
 
       /* Portrait */
