--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <p>
               I’m a final year PhD Candidate in Computer Science at Virginia Tech, USA.
               I am advised by <em> Dr. Denis Gracanin </em> and am a researcher in the <em> Distributed Virtual Environment Lab</em>. 
-              My work focuses <em>designing immersive Extended Reality (XR) systems for team-based professional training</em> and investigates how XR can support realistic, high-fidelity collaboration 
+              My work focuses <em>designing immersive Extended Reality (XR) systems for professional team training</em> and investigates how XR can support realistic, high-fidelity collaboration 
               among collocated teams. 
               This research conducted is in active collaboration with Carilion Clinic, University of Pittsburg Medical Center, Indian Insititute of Technology, Madras and Virginia Tech.
               My other research projects include <em> developing XR-based Digital Twin for Cybersecurity Education</em> in collaboration with Virginia Military Institute and 
