--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
               among collocated teams. 
               This research conducted is in active collaboration with Carilion Clinic, University of Pittsburg Medical Center, Indian Insititute of Technology, Madras and Virginia Tech.
               My other research projects include <em> developing XR-based Digital Twin for Cybersecurity Education</em> in collaboration with Virginia Military Institute and 
-              <em>inclusion of AI and LLM in undergraduate CS curriculum</em> in collaboration with Virginia Tech.
+              <em>inclusion of AI and LLM in undergraduate CS curriculum</em>.
               I also enjoy teaching and have been an <ep>Instructor </ep> for CS 2114: Data Structures and Software Design for 2 years.
             </p>
           </div>
